assets/styles/styles.css
* {
    box-sizing: border-box;
}

html, body {
    width: 100%;
}

/* ------------------Bendri stiliai---------------------- */
div {
    border: 1px dashed grey;
}

.important-word-link {
    font-style: italic;
    font-weight: bold;
    color:#988425;
}

.important-word {
    font-style: italic;
    font-weight: bold;
    color:#75350f;
}

.bold-text {
    font-weight: bold;
}

.pad-bot-10 {
    padding-bottom: 10px;
}

.w-100 {
    width: 100%;
}

.d-inline-b {
    display: inline-block;
}


/* ----------------Pagrindinių puslapio dalių stiliai--------------- */
.page-container {
    display: flex;
    width: 100%;
}

.sidebar-menu {
    width: 5%;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    justify-content: center;
}

.main-content {
    flex-shrink: 1;
}


/*---------------------- Šoninio meniu stiliai----------- */
.sidebar-menu > ul {
    display: none;
    list-style-type: none;
    text-align: center;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 0px;
}


.sidebar-menu > ul > li {
    min-height: 30px;
    line-height: 30px;
    border: 1px solid grey;
}


.sidebar-menu > ul > li:hover {
    background-color: #c9c9c9;
}

.sidebar-menu > ul > li > a {
    display: block;
    text-decoration: none;
    color: initial;
}

.sidebar-menu > .arrow {
    width: 100%;
    min-width: 40px;
}

.sidebar-menu > .sidebar-menu-text {
    writing-mode: vertical-lr;
    text-orientation: upright;
    text-align: center;
    font-size: 20px;
}

/*-- Sidebar active styles --*/
.sidebar-menu.active > ul {
    display: initial;
}

.sidebar-menu.active {
    min-width: 12%;
}

.sidebar-menu.active > .arrow {

}

.sidebar-menu.active > .sidebar-menu-text {
    display: none;
}



/* ----------Teorijos turinio (section, theory-text) stiliai--------------- */

.section-header {
    background-color: #c9c9c9;
    text-align: center;
    
}


div.theory-text {
    background-color: #f4f4f4;

    font-family: arial, x-locale-body, sans-serif;
    letter-spacing: -.0027777778rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-size: 100%;
    line-height: 1.75;

    margin-top: 5px; 
    margin-bottom: 5px;

    border: 1px solid gray;

    padding-left: 1em;
    padding-right: 1em;
}


.example-list {
    background-color: #ddeaff;
    padding-top: 5px;
    padding-bottom: 10px;
}


div.code-div {
    padding: .5em;
    margin: .5em 0.2em;
    background: #eeebeb;
    border: 0px;
}

div.theory-text img {
    border: 2px solid black;
    display: block;
}

/*------------------------------------------------- SPOILER STILIAI------------------------------------- */

pre {
    overflow: scroll;
}

/* Bendrai pre > code */
pre > code {
    white-space: pre-wrap!important;            /* Rewriting PRISM styles, since the default is pre */
}

/* Spoiler paprastas */
.spoiler {
    background-color: #c9c9c9;
}

.spoiler > .spoiler-content {
    display: none;
}


.spoiler.active > .spoiler-content {
    display: initial;
}

.spoiler > .spoiler-button > button::after {
    content: "Rodyti kodą";
}

.spoiler.active > .spoiler-button > button::after {
    content: "Slėpti kodą";
}



/* Open image spoilerio stiliai */
.theory-text .open-image > img {
    height: 28px;
    display: initial;
}

.open-image > div {
    display: none;
}

.open-image.active > div {
    display: initial;
}

